components/LocationCard/LocationCard.module.css
.cardContainer {
  overflow: hidden;

  width: 100%;

  display: flex;
  align-items: stretch;
  justify-content: flex-start;
  flex-direction: column;

  border: 0px solid var(--color-scheme-1-border);
  border-radius: 12px;

  width: 100%;

  background-color: var(--color-scheme-2-foreground);
  color: var(--color-scheme-2-text);
}

.imageContainer {
  position: relative;
  width: 100%;
  height: 335px;
  overflow: hidden;
  border-bottom: 1px solid gray;
}

.image {
  object-fit: cover;
}

.cardTexContainer {
  padding: 16px;

  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 16px;
}

.locationType {
  font-weight: 600;
  font-size: 12px;
  line-height: 1.5;
}

.ratingContainer {
  height: 24px;

  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  flex-direction: row;
  gap: 0px;
}

.star {
  width: 24px;
  height: 24px;
  fill: #000;
}

.locationName {
  font-weight: 700;
  font-size: 26px;
  line-height: 1.5;
}

.schowLocationLinkContainer {
  align-self: stretch;

  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
  gap: 8px;

  border: 1px solid var(--color-scheme-2-border);
  border-radius: 6px;
  padding: 6px 12px;
  width: 100%;
  height: 48px;

  background: var(--opacity-neutral-darkest-5);
}

.schowLocationLinkContainer:hover,
.schowLocationLinkContainer:focus {
  background: rgb(233, 165, 131);
}

@media screen and (min-width: 768px) {
  .cardContainer {
    width: 340px;
    width: calc((100% -24px) / 2);
  }

  .locationType {
    font-size: 16px;
  }
}

@media screen and (min-width: 1440px) {
  .cardContainer {
    /* width: 421px; */
    width: calc((100% - (24px * 2)) / 3);
  }
}

